add update module support

--- a/fpgas/repos/first/Makefile
+++ b/fpgas/repos/first/Makefile
@@ -1,3 +1,6 @@
+# Run in MinGW
+# Jan.25, 2019,  Jack Lee
+
 # on windows you have to prefix vivado call with a cmd shell with /c
 ifeq ($(UNAME), Linux)
 PREFIX = ""
@@ -8,12 +11,6 @@ POSTFIX = "
 endif
 
 
-PREFIX = ""
-POSTFIX = ""
-
-# these are the sources - everything depends upon them
-# RTL=../hdl/top/top.v ../hdl/threeFlop/threeFlop.v
-# XDC=../xdc/top.xdc ../xdc/top_io_simple.xdc
 
 # These are all the compilation targets, starting with "all"
 all: golden ledCtrl update
@@ -25,11 +22,11 @@ ledCtrl:setupLedCtrl compileLedCtrl
 setupLedCtrl: .setupLedCtrl.done
 
 .setupLedCtrl.done:
-	vivado -mode batch -source ./scripts/setupLedCtrl.tcl -tempDir works -log setup.log -jou setup.jou
+	vivado -mode batch -source ./scripts/setupLedCtrl.tcl -tempDir works -log ledCtrlSetup.log -jou ledCtrlSetup.jou
 
 compileLedCtrl : .compileLedCtrl.done
 .compileLedCtrl.done : 
-	cmd /c "vivado -mode batch -source ./scripts/compileLedCtrl.tcl -log compile.log -jou compile.jou"
+	cmd /c "vivado -mode batch -source ./scripts/compileLedCtrl.tcl -tempDir works -log ledCtrlCompile.log -jou ledCtrlCompile.jou"
 
 
 ##### Project update
@@ -38,14 +35,12 @@ update:setupUpdate compileUpdate
 setupUpdate: .setupUpdate.done
 
 .setupUpdate.done:
-	vivado -mode batch -source ./projUpdate.tcl -tempDir works -log setup.log -jou setup.jou
-
-#	vivado -mode batch -source ./scripts/setupUpdate.tcl -force -tempDir works -log setupUpdate.log -jou setupUpdate.jou
+	vivado -mode batch -source ./scripts/setupUpdate.tcl -tempDir works -log updateSetup.log -jou updateSetup.jou
 
 
 compileUpdate : .compileUpdate.done
 .compileUpdate.done : 
-	cmd /c "vivado -mode batch -source ./scripts/compileUpdate.tcl -log compileUpdate.log -jou compileUpdate.jou"
+	cmd /c "vivado -mode batch -source ./scripts/compileUpdate.tcl -tempDir works -log updateCompile.log -jou updateCompile.jou"
 
 
 
@@ -56,19 +51,23 @@ golden:setupGolden compileGolden
 setupGolden: .setupGolden.done
 
 #.setupGolden.done:
-#	vivado -mode batch -source ./goldenProj.tcl -tempDir works -log setup.log -jou setup.jou
+#	vivado -mode batch -source ./goldenProj.tcl -tempDir works -log goldenSetup.log -jou goldenSetup.jou
 
 #setupGolden : .setupGolden.done
 #
 .setupGolden.done:
-	vivado -mode batch -source ./scripts/setupGolden.tcl -tempDir works -log setup.log -jou setup.jou
+	vivado -mode batch -source ./scripts/setupGolden.tcl -tempDir works -log goldenSetup.log -jou goldenSetup.jou
 
 
 #.setup.done
 compileGolden : .compileGolden.done
 .compileGolden.done : 
-	cmd /c "vivado -mode batch -source ./scripts/compileGolden.tcl -log compile.log -jou compile.jou"
+	cmd /c "vivado -mode batch -source ./scripts/compileGolden.tcl -tempDir works -log goldenCompile.log -jou goldenCompile.jou"
 
 # delete everything except this Makefile
 clean :	
-	find . -not -name "Makefile*" -not -name "." | xargs rm -rf
+	#find . -not -name "Makefile*" -not -name "." | xargs rm -rf
+	rm -rf *.log
+	rm -rf *.jou
+	rm -rf works
+	
